# agent-bob

./: Cargo.toml  flake.nix  rust-toolchain.toml
nix/: cross-targets.nix
src/: main.rs  ui.rs  web.rs
