[package]
name = "agent-bob"
author = "Garrett Comes"
description = "An AI coding agent"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29"
ratatui = { version = "0.30.0", features = ["crossterm_0_29"] }
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1"
regex = "1"
scraper = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate"] }
html2md = "0.2"
websearch = "0.1.1"
once_cell = "1.21.3"

